--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
   },
   "devDependencies": {
     "@types/node": "25.2.0",
-    "@types/react": "16.14.68",
+    "@types/react": "18.3.24",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.4"
+  },
+  "overrides": {
+    "react-uid": "2.4.0",
+    "react-virtualized-auto-sizer": "2.0.2",
+    "react-window": "2.2.6"
   }
 }
