--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@base-ui/react": "^1.1.0",
     "baseui": "^16.0.0",
     "next": "14.2.5",
     "react": "18.3.1",
